--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <link rel="stylesheet" href="/assets/css/home11-style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   </head>
-  <body>
+  <body class="megance-body">
     <noscript>
       <iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-T3RHBL3X"
