--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta property="og:url" content="/" />
     <meta property="og:image" content="/assets/logo.svg" />
     <meta property="og:image:alt" content="Megance logo" />
+<script type="module" src="/src/main.jsx?v=20251015"></script>
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
