added google meta tag

--- a/index.html
+++ b/index.html
@@ -1,73 +1,54 @@
 <!DOCTYPE html>
 <html lang="zxx">
-  <head>
-    <!-- Metas -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-    <meta
-      name="description"
-      content="Megance — Elevate every turn with bold, sleek footwear engineered for comfort and performance."
-    />
-    <meta
-      name="keywords"
-      content="Megance, sneakers, footwear, running shoes, lifestyle shoes, India"
-    />
-    <meta name="author" content="Megance" />
-    <meta name="robots" content="index,follow" />
-    <meta name="theme-color" content="#0b0b0b" />
-    <meta name="color-scheme" content="dark light" />
-    <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
-    />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <link rel="canonical" href="https://megance.com/?v=launch2" />
-    <meta property="og:url" content="https://megance.com/?v=launch2" />
 
-    <!-- Open Graph -->
-    <meta property="og:locale" content="en_IN" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Megance" />
-    <meta property="og:title" content="MEGANCE" />
-    <meta
-      property="og:description"
-      content="Elevate every turn with bold, sleek footwear engineered for comfort and performance."
-    />
-    <meta property="og:url" content="/" />
-    <meta property="og:image" content="/assets/logo.svg" />
-    <meta property="og:image:alt" content="Megance logo" />
-    
+<head>
+  <!-- Metas -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="description"
+    content="Megance — Elevate every turn with bold, sleek footwear engineered for comfort and performance." />
+  <meta name="keywords" content="Megance, sneakers, footwear, running shoes, lifestyle shoes, India" />
+  <meta name="author" content="Megance" />
+  <meta name="robots" content="index,follow" />
+  <meta name="theme-color" content="#0b0b0b" />
+  <meta name="color-scheme" content="dark light" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <link rel="canonical" href="https://megance.com/?v=launch2" />
+  <meta property="og:url" content="https://megance.com/?v=launch2" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="MEGANCE" />
-    <meta
-      name="twitter:description"
-      content="Elevate every turn with bold, sleek footwear engineered for comfort and performance."
-    />
-    <meta name="twitter:image" content="/assets/imgs/megance_logo_w.png" />
+  <!-- Open Graph -->
+  <meta property="og:locale" content="en_IN" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Megance" />
+  <meta property="og:title" content="MEGANCE" />
+  <meta property="og:description"
+    content="Elevate every turn with bold, sleek footwear engineered for comfort and performance." />
+  <meta property="og:url" content="/" />
+  <meta property="og:image" content="/assets/logo.svg" />
+  <meta property="og:image:alt" content="Megance logo" />
 
-    <title>MEGANCE</title>
 
-    <!-- Icons & Favicons -->
-    <link rel="icon" href="/assets/logo.svg" type="image/svg+xml" />
-    <link rel="icon" href="/assets/imgs/favicon.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/assets/imgs/megance_logo_w.png" />
-    <link rel="mask-icon" href="/assets/logo.svg" color="#0b0b0b" />
-    <link
-      rel="preload"
-      href="/assets/logo.svg"
-      as="image"
-      type="image/svg+xml"
-    />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="MEGANCE" />
+  <meta name="twitter:description"
+    content="Elevate every turn with bold, sleek footwear engineered for comfort and performance." />
+  <meta name="twitter:image" content="/assets/imgs/megance_logo_w.png" />
 
-    <!-- Structured Data -->
-    <script type="application/ld+json">
+  <title>MEGANCE</title>
+
+  <!-- Icons & Favicons -->
+  <link rel="icon" href="/assets/logo.svg" type="image/svg+xml" />
+  <link rel="icon" href="/assets/imgs/favicon.ico" sizes="any" />
+  <link rel="apple-touch-icon" href="/assets/imgs/megance_logo_w.png" />
+  <link rel="mask-icon" href="/assets/logo.svg" color="#0b0b0b" />
+  <link rel="preload" href="/assets/logo.svg" as="image" type="image/svg+xml" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
@@ -77,112 +58,110 @@
       }
     </script>
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Maven+Pro:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://db.onlinewebfonts.com/c/a8d7b985e4eb8c5d34f2302ffe83e917?family=Nike+Futura+ND"
-      rel="stylesheet"
-    />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Maven+Pro:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap"
+    rel="stylesheet" />
+  <link href="https://db.onlinewebfonts.com/c/a8d7b985e4eb8c5d34f2302ffe83e917?family=Nike+Futura+ND"
+    rel="stylesheet" />
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="/common/css/plugins.css" />
-    <link rel="stylesheet" href="/common/css/common_style.css" />
-    <link rel="stylesheet" href="/assets/css/home11-style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
-  </head>
-  <body class="megance-body">
-    <noscript>
-      <iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-T3RHBL3X"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe>
-    </noscript>
+  <!-- Styles -->
+  <link rel="stylesheet" href="/common/css/plugins.css" />
+  <link rel="stylesheet" href="/common/css/common_style.css" />
+  <link rel="stylesheet" href="/assets/css/home11-style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FMZMPVGJ2E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-    <div id="root"></div>
+    gtag('config', 'G-FMZMPVGJ2E');
+  </script>
+</head>
 
-    <script type="module" src="/src/main.jsx"></script>
+<body class="megance-body">
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T3RHBL3X" height="0" width="0"
+      style="display: none; visibility: hidden"></iframe>
+  </noscript>
 
-    <!-- Disable GSAP ScrollSmoother globally to prevent scroll jumps during interactions -->
-    <script>
-      (function(){
+  <div id="root"></div>
+
+  <script type="module" src="/src/main.jsx"></script>
+
+  <!-- Disable GSAP ScrollSmoother globally to prevent scroll jumps during interactions -->
+  <script>
+    (function () {
+      try {
+        // Allow runtime override via localStorage; default to disabled
+        var ls = localStorage.getItem('disableSmoother');
+        if (!ls) localStorage.setItem('disableSmoother', 'true');
+        window.__DISABLE_SMOOTHER = true;
+      } catch (_) {
+        window.__DISABLE_SMOOTHER = true;
+      }
+    })();
+  </script>
+
+  <!-- Load vendor scripts after React mounts to ensure required nodes exist -->
+  <script>
+    (function () {
+      function ready() {
+        const hasCursor = !!document.querySelector(".cursor");
+        const hasProgress = !!document.querySelector(".progress-wrap path");
+        const hasRoot = !!document.getElementById("root");
+        return hasRoot && hasCursor && hasProgress;
+      }
+      function loadScript(src) {
+        return new Promise(function (resolve, reject) {
+          var s = document.createElement("script");
+          s.src = src;
+          s.onload = resolve;
+          s.onerror = reject;
+          document.body.appendChild(s);
+        });
+      }
+      async function boot() {
+        // Wait until React has mounted App and inserted required elements
+        for (let i = 0; i < 60 && !ready(); i++) {
+          await new Promise((r) => setTimeout(r, 50));
+        }
+        // Load in order
+        await loadScript("/common/js/lib/jquery-3.6.0.min.js");
+        await loadScript("/common/js/lib/jquery-migrate-3.4.0.min.js");
+        await loadScript("/common/js/lib/plugins.js");
+        // Silence GSAP warnings for missing targets used by vendor scripts
         try {
-          // Allow runtime override via localStorage; default to disabled
-          var ls = localStorage.getItem('disableSmoother');
-          if (!ls) localStorage.setItem('disableSmoother', 'true');
-          window.__DISABLE_SMOOTHER = true;
-        } catch(_) {
-          window.__DISABLE_SMOOTHER = true;
+          if (window.gsap && window.gsap.config)
+            window.gsap.config({ nullTargetWarn: false });
+        } catch (_) { }
+        await loadScript(
+          "https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
+        );
+        await loadScript("/common/js/gsap_lib/ScrollSmoother.min.js");
+        await loadScript(
+          "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+        );
+        await loadScript("/common/js/gsap_lib/SplitText.min.js");
+        await loadScript("/common/js/common_scripts.js");
+        try {
+          window.dispatchEvent(
+            new CustomEvent("vendors:ready", {
+              detail: { swiper: !!window.Swiper },
+            })
+          );
+        } catch (e) {
+          // ignore
         }
-      })();
-    </script>
+      }
+      boot();
+    })();
+  </script>
+</body>
 
-    <!-- Load vendor scripts after React mounts to ensure required nodes exist -->
-    <script>
-      (function () {
-        function ready() {
-          const hasCursor = !!document.querySelector(".cursor");
-          const hasProgress = !!document.querySelector(".progress-wrap path");
-          const hasRoot = !!document.getElementById("root");
-          return hasRoot && hasCursor && hasProgress;
-        }
-        function loadScript(src) {
-          return new Promise(function (resolve, reject) {
-            var s = document.createElement("script");
-            s.src = src;
-            s.onload = resolve;
-            s.onerror = reject;
-            document.body.appendChild(s);
-          });
-        }
-        async function boot() {
-          // Wait until React has mounted App and inserted required elements
-          for (let i = 0; i < 60 && !ready(); i++) {
-            await new Promise((r) => setTimeout(r, 50));
-          }
-          // Load in order
-          await loadScript("/common/js/lib/jquery-3.6.0.min.js");
-          await loadScript("/common/js/lib/jquery-migrate-3.4.0.min.js");
-          await loadScript("/common/js/lib/plugins.js");
-          // Silence GSAP warnings for missing targets used by vendor scripts
-          try {
-            if (window.gsap && window.gsap.config)
-              window.gsap.config({ nullTargetWarn: false });
-          } catch (_) {}
-          await loadScript(
-            "https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
-          );
-          await loadScript("/common/js/gsap_lib/ScrollSmoother.min.js");
-          await loadScript(
-            "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
-          );
-          await loadScript("/common/js/gsap_lib/SplitText.min.js");
-          await loadScript("/common/js/common_scripts.js");
-          try {
-            window.dispatchEvent(
-              new CustomEvent("vendors:ready", {
-                detail: { swiper: !!window.Swiper },
-              })
-            );
-          } catch (e) {
-            // ignore
-          }
-        }
-        boot();
-      })();
-    </script>
-  </body>
 </html>
