--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
   <link rel="mask-icon" href="/assets/logo.svg" color="#0b0b0b" />
   <link rel="preload" href="/assets/logo.svg" as="image" type="image/svg+xml" />
 
+  <!-- Facebook Pixel (noscript fallback) -->
+  <!-- Set your Pixel ID via VITE_FB_PIXEL_ID or window.FB_PIXEL_ID in app code -->
+
+
   <!-- Structured Data -->
   <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Megance",
+        "name": "Megance",   
         "url": "/",
         "logo": "/assets/logo.svg"
       }
